# cretip-app

./: .gitignore  API.md  ARCHITECTURE.md  BALANCE_SYSTEM.md  BUILDOUT_SUMMARY.md  CHECKLIST.md  CONTRIBUTING.md  DELIVERABLES.md  INDEX.md  LICENSE  QUICKREF.md  QUICKSTART.bat  QUICKSTART.sh  README.md  SECURITY.md  SETUP.md  START_HERE.md  STELLAR_INTEGRATION.md  TROUBLESHOOTING.md  WALLET_INSTALL_CORRECT.md  WALLET_SETUP_FINAL.md  XLM_TO_USDC_MIGRATION.md  package.json
backend/: .env.example  .eslintrc.json  package-lock.json  package.json
backend/src/: server.js
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  page.js
frontend/app/[username]/: page.js
frontend/app/dashboard/: page.js
frontend/components/: ActivityFeed.js  AuthModal.js  ConnectWalletButton.js  CopyProfileLink.js  CreatorActivationForm.js  LinkWalletSection.js  QuickTipModal.js  TipCard.js  TipCreatorModal.js
frontend/context/: AuthContext.js  WalletContext.js
frontend/lib/: stellar.js
